<resources>
    <string name="app_name">LiveScoreAdmin</string>
    <string name="app_label">Live Score Admin</string>
    <string name="welcome_label">WELCOME</string>
    <string name="scores_page">Scores</string>
    <string name="favourites_page">Favourites</string>
    <string name="current_month">January</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="favourites_query_hint">Tournament name</string>
    <string name="tournament_name">Tournament name</string>
    <string name="tournament_location">Tournament location</string>
    <string name="favourites">Favourites</string>
    <string name="intro_favourites">Follow\nTournaments</string>
    <string name="tournament_logo">Tournament logo</string>
    <string name="next">Next</string>
    <string name="copyright">\@2023 Arsensio_20</string>
    <string name="start">Start</string>
    <string name="welcome_text">Never miss a goal - Get live match alerts, fixtures and results for your favourite team and competitions</string>
    <string name="no_tournaments">Currently there are no tournaments</string>
    <string name="no_tournaments_with_name">No tournaments with such name</string>
    <string name="live">Live</string>
    <string name="days_button_example">WEEK\n12 MON</string>
    <string name="group">Group</string>
    <string name="no_internet">There is no internet!</string>
    <string name="no_matches">No matches for today</string>
    <string name="full_time">Full Time</string>
    <string name="summary">Summary</string>
    <string name="game_item_ft">FT</string>
    <string name="game_item_live">Live</string>
    <string name="table">Table</string>
    <string name="player_stats">Player Stats</string>
    <string name="team_stats">Team Stats</string>
    <string name="matches">Matches</string>
    <string name="team">Team</string>
    <string name="points">PTS</string>
    <string name="goal_difference">GD</string>
    <string name="played_match_count">P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="tournaments">Tournaments</string>
    <string name="create_in_draw">Create in draw</string>
    <string name="upload_team">Upload Teams</string>
    <string name="transfers">Transfers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="plus">+</string>
    <string name="paste_link">Paste your link to google sheet</string>
    <string name="paste_link_here">Paste link here</string>
    <string name="menu">Menu</string>
    <string name="number_symbol">#</string>
    <string name="player_statistics_all">ALL</string>
    <string name="player_statistics_assists">ASSISTS</string>
    <string name="player_statistics_goals">GOALS</string>
    <string name="player_statistics_red_cards">RED CARDS</string>
    <string name="player_statistics_yellow_cards">YELLOW CARDS</string>
    <string name="player_statistic_total">Total</string>
    <string name="player_statistic_per_game">Per Game</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_password_or_login">Invalid password or username</string>
    <string name="username">Username</string>
    <string name="team_name">Team name</string>
    <string name="choose_team">Choose team to make transfer</string>
    <string name="choose_tournament">Choose tournament</string>
    <string name="player_number">#1</string>
    <string name="player_name">Player name</string>
    <string name="update">Update</string>
    <string name="Num">#</string>
    <string name="win_count">W</string>
    <string name="draw_count">D</string>
    <string name="lose_count">L</string>
    <string name="goal_scored">GS</string>
    <string name="goal_missed">GM</string>
    <string name="tournament_table">Tournament Table</string>
    <string name="finish_tournament">Finish Tournament</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure">Are you sure you want to finish the tournament?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="finish_group_stage">Finish group stage</string>
    <string name="stage_not_started_yet">Stage not started yet</string>
    <string name="finish_stage">Finish stage</string>
    <string name="next_stage">NS</string>
    <string name="create_game">Create game</string>
    <string name="tournament">Tournament</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="date_and_time">Date and time</string>
    <string name="create">Create</string>
    <string name="automatic_defeat">Automatic defeat</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="enter_tournament_name">Enter tournament name</string>
    <string name="paste_logo_link">Paste link here</string>
    <string name="tournament_type">Tournament type</string>
    <string name="team_number">Team number</string>
    <string name="enter_tournament_location">Enter tournament locatiion</string>
    <string name="goal">Goal</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="end_match">End Match</string>
    <string name="penalty">Penalty</string>
    <string name="goal_event">Goal</string>
    <string name="author">Author</string>
    <string name="assist_author">Assist author</string>
    <string name="minute">Minute</string>
    <string name="save">Save</string>
    <string name="missed">Missed</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>