<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/app_black"
    android:padding="30dp">

    <!-- Add your custom views here -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/confirmation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/are_you_sure"
        android:gravity="center"
        android:textSize="16sp"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_selector"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_selector"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />

    </LinearLayout>

</LinearLayout>