<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/create_tournament_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_tournament_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/create_tournament"
            android:textColor="@color/app_orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tournament_name_edit_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_tournament_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tournament_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tournament_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tournament_name_edit_text_label"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/enter_tournament_name"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="@color/app_black" />

        <TextView
            android:id="@+id/tournament_logo_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tournament_name_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tournament_logo"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logo_link_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tournament_logo_link"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/paste_logo_link"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="@color/app_black" />

        <TextView
            android:id="@+id/tournament_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_link_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tournament_location"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tournament_location_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tournament_location"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/enter_tournament_location"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="@color/app_black" />

    </RelativeLayout>

</RelativeLayout>