<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/create_game_background"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/create_tournament_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter_medium"
        android:text="@string/create_game"
        android:textColor="@color/app_orange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tournament_name_edit_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_tournament_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tournament_name"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tournament_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tournament_name_edit_text_label"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/enter_tournament_name"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:textColor="@color/app_black" />

    <TextView
        android:id="@+id/tournament_logo_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tournament_name_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tournament_logo"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/logo_link_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tournament_logo_link"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/paste_logo_link"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:textColor="@color/app_black" />

    <TextView
        android:id="@+id/tournament_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_link_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tournament_type"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/tournament_type"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/tournament_type_text"
        android:layout_marginTop="20dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:onClick="onPreviousClick"
            android:src="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:onClick="onNextClick"
            android:src="@drawable/ic_next" />

    </RelativeLayout>

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tournament_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_selector"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textStyle="bold" />


</RelativeLayout>