<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_black"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/intro_app_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/fk_aloko_kz"
        android:text="@string/app_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/welcome_label"
        android:layout_below="@id/intro_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"
        android:layout_marginTop="60dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/impact"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_below="@id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"/>

</RelativeLayout>