<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/create_game_background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/manipulate_event_team_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/barcelona" />

        <TextView
            android:id="@+id/manipulate_event_event_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/goal_event"
            android:textColor="@color/app_orange"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/manipulate_event_author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/manipulate_event_author_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/create_game_picker_background"
        android:padding="10dp"
        android:paddingStart="15dp" />

    <TextView
        android:id="@+id/manipulate_event_assist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/assist_author"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/manipulate_event_assist_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/create_game_picker_background"
        android:padding="10dp"
        android:paddingStart="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/manipulate_event_minute_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/minute"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text=" :"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/manipulate_event_minute_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Picker" />

    </LinearLayout>

    <Button
        android:id="@+id/manipulate_event_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/squircle_button"
        android:backgroundTint="@color/app_orange"
        android:fontFamily="@font/inter_medium"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>